@@ -74,6 +74,8 @@ extern "C" {
 #define WC_COMBOBOXW	L"ComboBox"
 #define WC_SCROLLBARA	"ScrollBar"
 #define WC_SCROLLBARW	L"ScrollBar"
+#define WC_LINKA	"SysLink"
+#define WC_LINKW	L"SysLink"
 
 #ifdef UNICODE
 #define HOTKEY_CLASS HOTKEY_CLASSW
@@ -101,6 +103,7 @@ extern "C" {
 #define WC_LISTBOX WC_LISTBOXW
 #define WC_COMBOBOX WC_COMBOBOXW
 #define WC_SCROLLBAR WC_SCROLLBARW
+#define WC_LINK WC_LINKW
 #else
 #define ANIMATE_CLASS ANIMATE_CLASSA
 #define HOTKEY_CLASS HOTKEY_CLASSA
@@ -127,6 +130,7 @@ extern "C" {
 #define WC_LISTBOX WC_LISTBOXA
 #define WC_COMBOBOX WC_COMBOBOXA
 #define WC_SCROLLBAR WC_SCROLLBARA
+#define WC_LINK WC_LINKA
 #endif
 
 #if (_WIN32_IE >= 0x0500)
@@ -1725,7 +1729,6 @@ extern "C" {
 #define PGM_GETBUTTONSIZE (PGM_FIRST+11)
 #define PGM_GETBUTTONSTATE (PGM_FIRST+12)
 #define PGM_GETDROPTARGET CCM_GETDROPTARGET
-
 #define RBS_REGISTERDROP 4096
 #define RBS_AUTOSIZE 8192
 #define RBS_VERTICALGRIPPER 16384
@@ -1832,6 +1835,21 @@ extern "C" {
 #define FSB_ENCARTA_MODE	1
 #define FSB_REGULAR_MODE	0
 #endif /* _WIN32_IE >= 0x400 */
+#if (_WIN32_WINNT >= 0x0501)
+#define LIF_ITEMINDEX	0x00000001
+#define LIF_STATE	0x00000002
+#define LIF_ITEMID	0x00000004
+#define LIF_URL	0x00000008
+#define LIS_FOCUSED	0x00000001
+#define LIS_ENABLED	0x00000002
+#define LIS_VISITED	0x00000004
+#define LM_HITTEST	(WM_USER + 768)
+#define LM_GETIDEALHEIGHT	(WM_USER + 769)
+#define LM_SETITEM	(WM_USER + 770)
+#define LM_GETITEM	(WM_USER + 771)
+#define MAX_LINKID_TEXT	48
+#define L_MAX_URL_LENGTH	2084
+#endif
 
 #ifndef RC_INVOKED
 typedef struct tagCOMBOBOXEXITEMA{
@@ -2895,6 +2913,22 @@ typedef INT (CALLBACK *PFNDSAENUMCALLBACK)(PVOID,PVOID);
 typedef INT (CALLBACK *PFNDPACOMPARE)(PVOID,PVOID,LPARAM);
 #if (_WIN32_WINNT >= 0x0501)
 typedef LRESULT (CALLBACK *SUBCLASSPROC)(HWND,UINT,WPARAM,LPARAM,UINT_PTR,DWORD_PTR);
+typedef struct tagLITEM {
+	UINT mask;
+	int iLink;
+	UINT state;
+	UINT stateMask;
+	WCHAR szID[MAX_LINKID_TEXT];
+	WCHAR szUrl[L_MAX_URL_LENGTH];
+} LITEM,*PLITEM;
+typedef struct tagLHITTESTINFO {
+	POINT pt;
+	LITEM item;
+} LHITTESTINFO,*PLHITTESTINFO;
+typedef struct tagNMLINK {
+	NMHDR hdr;
+	LITEM item;
+} NMLINK,*PNMLINK;
 #endif /* _WIN32_WINNT >= 0x0501 */
 
 #define INDEXTOOVERLAYMASK(i) ((i)<<8)
