@@ -267,21 +267,23 @@ extern "C" {
 #define SP_OUTOFMEMORY	(-5)
 #define SP_USERABORT	(-3)
 #define SP_APPABORT	(-2)
-#define BLACKNESS	0x42
-#define NOTSRCERASE	0x1100A6
-#define NOTSRCCOPY	0x330008
-#define SRCERASE	0x440328
-#define DSTINVERT	0x550009
-#define PATINVERT	0x5A0049
-#define SRCINVERT	0x660046
-#define SRCAND	0x8800C6
-#define MERGEPAINT	0xBB0226
-#define MERGECOPY	0xC000CA
-#define SRCCOPY 0xCC0020
-#define SRCPAINT	0xEE0086
-#define PATCOPY	0xF00021
-#define PATPAINT	0xFB0A09
-#define WHITENESS	0xFF0062
+#define BLACKNESS	0x00000042
+#define NOTSRCERASE	0x001100A6
+#define NOTSRCCOPY	0x00330008
+#define SRCERASE	0x00440328
+#define DSTINVERT	0x00550009
+#define PATINVERT	0x005A0049
+#define SRCINVERT	0x00660046
+#define SRCAND	0x008800C6
+#define MERGEPAINT	0x00BB0226
+#define MERGECOPY	0x00C000CA
+#define SRCCOPY 0x00CC0020
+#define SRCPAINT	0x00EE0086
+#define PATCOPY	0x00F00021
+#define PATPAINT	0x00FB0A09
+#define WHITENESS	0x00FF0062
+#define CAPTUREBLT	0x40000000
+#define NOMIRRORBITMAP	0x80000000
 #define R2_BLACK	1
 #define R2_COPYPEN	13
 #define R2_MASKNOTPEN	3
